css/main.css
html {
  box-sizing: border-box;
  line-height: 1.5;
  font-family: Merriweather, serif;
}

*, *::before, *::after {
  box-sizing: inherit;
}

body {
  margin: 0;
}

header {
  background-color: #d05c2e;
  color: #fff;
}

h1 {
  margin: 0;
}

img {
  width: 40px;
}

.title {
  padding: .5em 0;
  display: flex;
  justify-content: space-between;
}

.list {
  width: 100%;
  margin: 0;
  padding: 0;
  display: flex;
  justify-content: space-around;
  text-align: center;
}

li {
  list-style-type: none;
  flex-basis: 33.4%;
}

a {
  display: inline-block;
  font-size: 1.125rem;
  text-decoration: none;
  color: #fff;
  padding-top: .5em;
  padding-bottom: .5em;
  border: solid #a63f38;
  border-width: 2px 1px;
  width: 100%;
}

